--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "browser-sync": "^2.10.1",
     "gulp": "^3.9.0",
     "gulp-minify-css": "^1.2.2",
-    "gulp-plumber": "/Users/yoksel1.1.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-ruby-sass": "^2.0.6"
   },
   "dependencies": {
