--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/yoksel/flex-cheatsheet",
   "devDependencies": {
-    "browser-sync": "^2.10.1",
+    "browser-sync": "^2.26.7",
     "gulp": "^4.0.0",
-    "gulp-minify-css": "^1.2.2",
+    "gulp-clean-css": "^4.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-ruby-sass": "^2.0.6",
     "lodash": "^4.17.13"
