--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "start": "gulp serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gulp build && gh-pages -d build"
   },
   "author": "yoksel",
   "license": "ISC",
@@ -19,9 +20,11 @@
   "homepage": "https://github.com/yoksel/flex-cheatsheet",
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
+    "gh-pages": "^2.2.0",
     "gulp": "^4.0.0",
     "gulp-clean-css": "^4.2.0",
-    "gulp-plumber": "^1.1.0",
+    "gulp-copy": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.13.1"
   }
