Update engine & content

--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "flex",
+  "name": "flex-cheatsheet",
   "version": "1.0.0",
-  "description": "Flexbox Cheatsheet",
-  "main": "index.html",
+  "description": "Flex Cheatsheet",
   "scripts": {
-    "start": "gulp serve",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gulp build && gh-pages -d build"
+    "test": "npm run lint",
+    "build": "webpack --config prod.config.js",
+    "start": "webpack-dev-server --open",
+    "deploy": "npm run build && gh-pages -d dist",
+    "lint": "npm run js:lint && npm run css:lint",
+    "lint:fix": "npm run js:fix && npm run css:fix",
+    "js:lint": "eslint src",
+    "js:fix": "eslint src --fix",
+    "css:lint": "stylelint **/*.scss",
+    "css:fix": "stylelint **/*.scss --fix",
+    "jest": "jest"
   },
   "author": "yoksel",
   "license": "ISC",
@@ -19,13 +26,35 @@
   },
   "homepage": "https://github.com/yoksel/flex-cheatsheet",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "del": "^5.1.0",
-    "gh-pages": "^2.2.0",
-    "gulp": "^4.0.0",
-    "gulp-clean-css": "^4.2.0",
-    "gulp-copy": "^4.0.1",
-    "gulp-sass": "^4.0.2",
-    "node-sass": "^4.13.1"
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.8.4",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
+    "css-loader": "^3.4.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "file-loader": "^5.0.2",
+    "gh-pages": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
+    "jest-transform-stub": "^2.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.2",
+    "stylelint": "^13.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
